--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
@@ -4,7 +4,7 @@
 <head th:replace="/Layout :: head"></head>
 
 <body>
-
+	<!--holaa-->
     <header th:replace="/Layout :: header"></header>
     
     <!--aca termina menu-->
