--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
@@ -9,7 +9,7 @@
     <!--aca termina menu-->
     <!--ESTO DE ACA ES EL CRONOMETRO-->
     <div style="background-color: rgb(255, 119, 119); width: 100%; height: 200px; margin: 10px;">
-       <h1>PlaceHolder Cronometroooooooooooo</h1>
+       <h1>PlaceHolder Cronometrooooooooooooa</h1>
      </div>
 
 
