--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
@@ -8,9 +8,11 @@
     
     <!--aca termina menu-->
     <!--ESTO DE ACA ES EL CRONOMETRO-->
-    <div style="background-color: rgb(255, 119, 119); width: 100%; height: 200px; margin: 10px;">
-       <h1>PlaceHolder Cronometrooooooooooooa</h1>
-     </div>
+<div style="background-color: black; width: 100%; height: 200px; margin: 10px;">
+    <h1 style="text-align: center; color: red"><img src="img/calavera.png" width="40px" height="52px"> INICIO DE LA GUERRA <img src="img/calavera.png" width="40px" height="52px"></h1>
+    <h2 id="output" style="color: white; text-align: center; font-size: 48px;"></h2>
+    <h2 style="text-align: center; color: red; font-size: 30px">DETEN ESTA MASACRE!!!!!</h2>
+  </div>
 
 
     <!--Esto de aca es la imagen junto al texto-->
@@ -99,6 +101,10 @@
     <!--footer-->
 	<footer th:replace="Layout :: footer"></footer>
     
+    <!-- links -->
+    <script src="../static/js/contador.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment-precise-range-plugin@1.3.0/moment-precise-range.min.js"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
