--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
@@ -9,7 +9,7 @@
     <!--aca termina menu-->
     <!--ESTO DE ACA ES EL CRONOMETRO-->
 <div style="background-color: black; width: 100%; height: 200px; margin: 10px;">
-    <h1 style="text-align: center; color: red"><img src="img/calavera.png" width="40px" height="52px"> INICIO DE LA GUERRA <img src="img/calavera.png" width="40px" height="52px"></h1>
+    <h1 style="text-align: center; color: red"><img src="/img/calavera.png" width="40px" height="52px"> INICIO DE LA GUERRA <img src="/img/calavera.png" width="40px" height="52px"></h1>
     <h2 id="output" style="color: white; text-align: center; font-size: 48px;"></h2>
     <h2 style="text-align: center; color: red; font-size: 30px">DETEN ESTA MASACRE!!!!!</h2>
   </div>
@@ -102,7 +102,7 @@
 	<footer th:replace="Layout :: footer"></footer>
     
     <!-- links -->
-    <script src="../static/js/contador.js"></script>
+    <script src="/js/contador.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment-precise-range-plugin@1.3.0/moment-precise-range.min.js"></script>
     
