--- a/TotalWar-LoginRegister-02/src/main/resources/static/css/Login.css
+++ b/TotalWar-LoginRegister-02/src/main/resources/static/css/Login.css
@@ -12,7 +12,6 @@ body{
 .modal-content{
     background-color: #3b4652;
     opacity: .85;
-   
     padding: 0 20px;
     box-shadow: 0px 0px 3px #848484;
 }
@@ -53,37 +52,38 @@ body{
 }
 
 button{
+	
     width: 60%;
     margin: 5px 0 25px;
+    margin-top: 30px;
+
+    
 }
+
+#w{
+	font-size: 20px;
+	margin-bottom: 25px
+}
+
+#a{
+	font-size: 18px;
+	margin-bottom: 28px;
+	color: white;
+}
+
+h1{
+	color:white;
+	margin-bottom: 25px;
+	margin-top: 25px;
+} 
+
 
 .forgot{
     padding: 5px 0;
 }
 
 .forgot a{
+
     color: white;
-}
-
-
-
-#cochi{
-	padding-left: 10px;
-	
-}
-
-#tuvi{
-	  margin-top: 20px;
-	  margin-bottom: 100px;
-}
-
-.form-control{
-	margin-top: 0px;
-}
-
-.nombre{
-	margin-top:30px;
-	font-size: 15px;
-	color: white;
-	text-align: left;
+      font-size: 15px;
 }
