--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Layout.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Layout.html
@@ -15,6 +15,9 @@
 	<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet'>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- Nuestro css-->
+<link rel="stylesheet" type="text/css" href="static/css/index.css"
+	th:href="@{/css/resgistro.css}">
 </head>
 <body>
 
