--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Login.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Login.html
@@ -1,59 +1,105 @@
 <!DOCTYPE html>
-<html xmlns:th ="http://thymeleaf.org">
-	<head>
-<meta charset="UTF-8">
-
-	 <!--JQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-    <!-- Los iconos tipo Solid de Fontawesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
-    <!-- Nuestro css-->
-    <link rel="stylesheet" type="text/css" href="static/css/Login.css" th:href="@{/css/Login.css}">
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="utf-8">
+<title>Inicio de sesión</title>
 
 
-<title>Iniciar Sesion</title>
+<!--JQUERY-->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+	crossorigin="anonymous">
+
+<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+<!-- Los iconos tipo Solid de Fontawesome-->
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+<script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<!-- Nuestro css-->
+<link rel="stylesheet" type="text/css" href="static/css/index.css"
+	th:href="@{/css/registro.css}">
+
 </head>
 <body>
-	 <div class="modal-dialog text-center">
-        <div class="col-sm-8 main-section">
-            <div class="modal-content">
-                <div class="col-12 user-img">
-                    <img src="static/img/user.png" th:src="@{/img/user.png}"/>
-                </div>
-                <form class="col-12" th:action="@{/login}" method="post" >
-                 <h4 class="nombre">Ingresar nombre</h4>
-                    <div class="form-group" id="user-group">
-                 	   
-                        <input type="text" class="form-control" placeholder="Nombre de usuario" name="username" id="idNombre"/>
-                    </div>
-                 <h4 class="nombre" >Contraseña</h4>
-                    <div class="form-group" id="contrasena-group">
-                    	
-                        <input type="password" class="form-control" placeholder="Contrasena" name="password" id="idContra"/>
-                    </div>
-                    
-                     <div class="col-12 forgot">
-                    <a href="/register" id= "cochi">No tienes cuenta en TOTAL WAR?</a>
-                </div>
-                    
-                    <button type="submit"   id="tuvi"class="btn btn-primary">Iniciar sesion <i class="fas fa-sign-in-alt"></i>   </button>
-                </form>
-               
-                <div th:if="${param.error}" class="alert alert-danger" role="alert">
-		            Invalid username and password.
-		        </div>
-		        <div th:if="${param.logout}" class="alert alert-success" role="alert">
-		            You have been logged out.
-		        </div>
-            </div>
-        </div>
-    </div>
+
+
+
+	<div class="modal-dialog text-center">
+		<div class="col-sm-8 main-section">
+			<div class="modal-content">
+				<div class="col-12 user-img">
+					<img src="static/img/user.png" th:src="@{/img/user.png}" />
+				</div>
+
+				<form th:action="@{/login}" method="post" class="col-12">
+
+					<div th:if=${param.error}>
+						<div class="alert alert-danger">Usuario o contraseña
+							inválidos</div>
+					</div>
+
+					<div th:if=${param.logout}>
+						<div class="alert alert-success">Ha cerrado sesión
+							exitosamente</div>
+					</div>
+
+
+					<div class="form-group" id="user-group">
+						<input placeholder="Nombre de usuario" id="username"
+							name="username" type="text" class="form-control" required
+							autofocus="autofocus">
+					</div>
+
+					<div class="form-group" id="contrasena-group">
+						<input id="password" placeholder="Contrasena" type="password"
+							name="password" class="form-control" required
+							autofocus="autofocus">
+					</div>
+
+
+
+
+					<button type="submit" class="btn btn-primary" name="login-submit"
+						value="Iniciar sesión" id="w" th:href="@{/home2}"> 
+						<i class="fas fa-sign-in-alt"></i> Ingresar
+					</button>
+					
+
+				</form>
+					
+						<a th:href="@{/registro}" id="a"> No tienes cuenta en TOTAL WAR?</a>
+				
+					
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
+
+
+
