--- a/TotalWar-LoginRegister-02/src/main/resources/templates/registro.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/registro.html
@@ -1,78 +1,99 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Mi primer Login</title>
+<meta charset="utf-8">
+<title>Registro de usuarios</title>
 
-    <!--JQUERY-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<!--JQUERY-->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
 
-    <!-- Los iconos tipo Solid de Fontawesome-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
-    <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
-    <!-- Nuestro css-->
-    <link rel="stylesheet" type="text/css" href="static/css/registro.css" th:href="@{/css/registro.css}">
-
+<!-- Optional theme -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+	crossorigin="anonymous">
+	<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<!-- Los iconos tipo Solid de Fontawesome-->
+<link rel="stylesheet"
+	href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+<script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+<!-- Nuestro css-->
+<link rel="stylesheet" type="text/css" href="static/css/index.css"
+	th:href="@{/css/registro.css}">
 </head>
+
+
 <body>
-    <div class="modal-dialog text-center">
-        <div class="col-sm-8 main-section">
-            <div class="modal-content">
-            
-            	<!--
-                <div class="col-12 user-img">
-                    <img src="static/img/user.png" th:src="@{/img/user.png}"/>
-                </div> -->
-                
-                <form class="col-12" th:action="@{/register}" method="post" >
-                	
-                	<div class="form-group" >
-                        <h1><b>Registro</b></h1>
-                    </div>
-                
-                    <div class="form-group" id="user-group">
-                        <input type="text" class="form-control" placeholder="Nombre de usuario" name="nombre" id="idNombre"/>
-                    </div>
-                    
-                    <div class="form-group" id="user-group">
-                        <input type="address" class="form-control" placeholder="Correo" name="correo" id="idCorreo">
-                    </div>
-                    
-                    <div class="form-group" id="contrasena-group">
-                        <input type="password" class="form-control" placeholder="Crea tu contraseña" name="contra" id="idContra"/>
-                    </div>
-                    
-                    <div class="form-group" id="contrasena-group">
-                        <input type="password" class="form-control" placeholder="Repetir contraseña" name="contra" id="idRepetirContra"/>
-                    </div>
-                    
-                    
-                    <button type="submit" class="btn btn-primary" value="Registar cuenta"><i class="fas fa-sign-in-alt"></i>  Registrate </button>
-                </form>
-                
-                <!--
-                <div class="col-12 forgot">
-                    <a href="#">Recordar contrasena?</a>
-                </div>
-                -->
-                
-                 <!--
-                <div th:if="${param.error}" class="alert alert-danger" role="alert">
-		            Invalid username and password.
-		        </div>
-		        -->
-		        <!--
-		        <div th:if="${param.logout}" class="alert alert-success" role="alert">
-		            You have been logged out.
-		        </div>
-		        -->
-		    
-            </div>
-        </div>
-    </div>
+
+
+
+
+	<div class="modal-dialog text-center">
+		<div class="col-sm-8 main-section">
+			<div class="modal-content">
+				<div th:if=${param.exito}>
+					<div class="alert alert-info">Se ha registrado exitosamente a
+						la aplicación</div>
+				</div>
+				<div th:if=${param.fallo}>
+					<div class="alert alert-danger">Las credenciales no coinciden</div>
+				</div>
+
+				<h1>Regístrate</h1>
+				<form th:action="@{/registro}" method="post" th:object="${usuario}">
+					<div class="form-group" id="user-group">
+						 <input  placeholder="Nombre de usuario"
+							id="nombre" type="text" class="form-control"
+							th:field="*{usuario}" required autofocus="autofocus">
+					</div>
+
+					<div class="form-group" id="user-group">
+						 <input  placeholder="Email"
+							id="email" type="email" class="form-control" th:field="*{email}"
+							required autofocus="autofocus">
+					</div>
+
+					<div class="form-group" id="contrasena-group">
+						 <input  placeholder="Contraseña"
+							type="password" id="password" class="form-control"
+							th:field="*{password}" required autofocus="autofocus">
+					</div>
+					<div class="form-group" id="contrasena-group">
+						 <input type="password" id="confirm" placeholder="Confirmar contraseña"
+							class="form-control" th:field="*{confirm}" required
+							autofocus="autofocus">
+					</div>
+					
+						<button type="submit" class="btn btn-primary" name="login-submit" id="w"><i class="fas fa-sign-in-alt"></i> Ingresar</button>
+						<div class="col-12 forgot">	
+						
+						
+						</div>
+						
+				</form>
+				<a th:href="@{/login}" id="a"> Si estas registrado inicia
+								sesión aqui</a>
+
+			</div>
+		</div>
+	</div>
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
 </body>
 </html>
