diseño de pagina
pasada de trapex

Co-Authored-By: darkhowxd44 <81727335+darkhowxd44@users.noreply.github.com>

--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Home.html
@@ -91,7 +91,7 @@
        <br>
         
          
-       <a  type="button" class="btn btn-outline-danger"; style="width: 400px; height: 80px; font-size: 30px" href="/Pagos">Como Ayudar</a>
+       <center> <a  type="button" class="btn btn-outline-danger"; style="width: 400px; height: 80px; font-size: 30px" href="/Pagos">Como Ayudar</a></center> 
        <br>
         <br>
          <br>
