--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Login.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Login.html
@@ -75,7 +75,7 @@
 
 
 					<button type="submit" class="btn btn-primary" name="login-submit"
-						value="Iniciar sesión" id="w" th:href="@{/home2}"> 
+						value="Iniciar sesión" id="w" th:href="@{/home}"> 
 						<i class="fas fa-sign-in-alt"></i> Ingresar
 					</button>
 					
