--- a/TotalWar-LoginRegister-02/src/main/resources/static/css/registro.css
+++ b/TotalWar-LoginRegister-02/src/main/resources/static/css/registro.css
@@ -1,10 +1,8 @@
-h1{
-	color:white
-}
 body{
-	 background: url(../img/background3.png) no-repeat center center fixed;
-	 background-size: cover;
+    background: url(../img/background3.png) no-repeat center center fixed;
+    background-size: cover;
 }
+
 .main-section{
     margin:0 auto;
     margin-top:25%;
@@ -12,10 +10,9 @@ body{
 }
 
 .modal-content{
-	
     background-color: #3b4652;
-    opacity: 9;
-    padding: 0 10px;
+    opacity: .85;
+    padding: 0 20px;
     box-shadow: 0px 0px 3px #848484;
 }
 .user-img{
@@ -55,14 +52,38 @@ body{
 }
 
 button{
+	
     width: 60%;
     margin: 5px 0 25px;
+    margin-top: 30px;
+
+    
 }
+
+#w{
+	font-size: 20px;
+	margin-bottom: 25px
+}
+
+#a{
+	font-size: 18px;
+	margin-bottom: 28px;
+	color: white;
+}
+
+h1{
+	color:white;
+	margin-bottom: 25px;
+	margin-top: 25px;
+} 
+
 
 .forgot{
     padding: 5px 0;
 }
 
 .forgot a{
+
     color: white;
+      font-size: 15px;
 }
