--- a/TotalWar-LoginRegister-02/src/main/resources/templates/Layout.html
+++ b/TotalWar-LoginRegister-02/src/main/resources/templates/Layout.html
@@ -33,14 +33,12 @@
 	        </button>
 	        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 	          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-	            <li class="nav-item">
-	              <a class="nav-link active" aria-current="page" style="color: white;" th:href="@{/login}" >Iniciar Sesion</a>
-	            </li>
-	            <li class="nav-item">
-	              <a class="nav-link" style="color: white;"  th:href="@{/register}" >Registrate</a>
-	            </li>
+	            
 	            <li class="nav-item">
 	              <a class="nav-link" style="color: white;"  th:href="@{/home2}" >Noticia Principal</a>
+	            </li>
+	            <li class="nav-item">
+	              <a class="nav-link" style="color: white;"  th:href="@{/login?logout}" >Cerrar sesion</a>
 	            </li>
 	          </ul>
 	          <form class="d-flex" role="search">
